style.css
* {
    margin: 0;
    padding: 0;
    border: 0;
    outline: 0;
    font-size: 100%;
    vertical-align: baseline;
    background: transparent;
}

#logotop{
    width: 4vw;
    height: auto;
    position: absolute;
    margin-top: 0.5vw;
    left: 0.7vw;
    /*transform: translate(-50%, -50%);*/
}

#bigImage{
    width: 100vw;
    height: auto;
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: 5vw;
    border-bottom: 4px solid #0D3B66;

}

#classroomImg{
    width: 100vw;
    height: auto;
    display: block;
    margin-left: auto;
    margin-right: auto;
    border-bottom: 4px solid #0D3B66;
    border-top: 4px solid #0D3B66;
}

#title {
    font-family: 'Lucida Sans Unicode', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', Geneva, Verdana, sans-serif;
    position: absolute;
    margin-top: 2.25%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
    height: auto;
    font-size: 3vw;
    color: #0D3B66;
    text-decoration: underline solid;
}

#topbar {
    position: fixed;
    top: 0px;
    z-index: 999;
    background-color: #1B998B;
    background-image: linear-gradient(to right, #1B998B, #4ECDC4,  #1B998B);
    width: 100vw;
    height: 5vw;
    border-bottom: 4px solid #0D3B66;
}

a{
    color: #4ECDC4;
    text-decoration: none;
    font-family: 'Lucida Sans Unicode', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', Geneva, Verdana, sans-serif;

}


#aboutLink{
    position: absolute;
    margin-top: 2.5%;
    left: 75%;
    transform: translate(-50%, -50%);
    text-align: center;
    height: auto;
    font-size: 2vw;
    width: 8vw;

}

#ideasLink{
    position: absolute;
    margin-top: 2.5%;
    left: 25%;
    transform: translate(-50%, -50%);
    text-align: center;
    height: auto;
    font-size: 2vw;
    width: 8vw;
}
a:hover {
    background-color: #0D3B66;
}

h3 {
    font-family: 'Lucida Sans Unicode', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', Geneva, Verdana, sans-serif;
    text-align: center;
    color: #0D3B66;
    font-size: 2vw;
    margin-top: -6vw;
    padding-top: 6vw;

}



p {
    width: 90vw;
    height: auto;
    display: block;
    margin-left: auto;
    margin-right: auto;
    font-size: 1.5vw;
    color: #5D5E60;
    font-family: 'Lucida Sans Unicode', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', Geneva, Verdana, sans-serif;

}
li {
    margin-left: 5vw;
    margin-right:auto;
    height: auto;
    font-size: 1.3vw;
    color: #5D5E60;
    font-family: 'Lucida Sans Unicode', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', Geneva, Verdana, sans-serif;

}
#simonThrowsImage {
    width: 38vw;
    height: auto;
    margin-right: 5vw;
    margin-left: 5vw;
    border: 4px solid #0D3B66;
}

.sectionDiv{
    width: 100%;
    height: auto;
    overflow: hidden;
    margin-bottom: 1vw;
}
.lastSectionDiv{
    margin-bottom: 4vw !important;
}

#ideasDiv {
    width: 50vw;
    float: left;
}

#ideasImg {
    width: 48vw;
    float: left;
}

.anchors {
    transform: translate( 0vh, -50px);
}

.bottombar{
    color: #4ECDC4;
    font-size: 1vw;

}
.bottombara{
    margin-top: 1.5vw;
    float: left;
    text-align: left;
    margin-left: 5vw;
    transform: translate(-50%, -50%);

}

#bottombardiv{
    background-color: #1B998B;
    background-image: linear-gradient(to right, #1B998B, #4ECDC4,  #1B998B);
    height: 3vw;
    clear: both;
    width: 100vw;
    border-top: 4px solid #0D3B66;
    position: absolute;
    bottom: 0px;
    margin-top: 1vw;
}
body {
    position: relative;
    min-height: 100vh;
    margin: 0;
}

#dnarepltitle{
    margin-top: 6vw;
    padding-top: 0px;
}
#dnarepl{
    width: 90vw;
    height: 30vw;
    border: 4px solid #0D3B66;
    margin-left: 5vw;
    margin-right: auto;
}

